# threatcheck-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish-test.yml  python-publish.yml
src/threatcheck/: __init__.py  __main__.py  cli.py  console.py  helpers.py
src/threatcheck/scanners/: __init__.py  amsi.py  base.py  clamav.py  defender.py
